...
                                    .font(.caption2)
                            }
                            .frame(width: 60)
                        }
                        .padding(.vertical, 8)
                    }
                    .navigationBarTitle("Zamówienia (\(zamowienia.count))", displayMode: .inline)
                }
            }
            else {
                Spacer()
                Text("Brak zamówień")
                    .foregroundColor(Color.gray)
...
